--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,9 +5,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ master ]
+    branches: [ "master" ]
 
 jobs:
   build:
@@ -23,13 +23,14 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Build and Push Docker Image
-      uses: docker/setup-buildx-action@v2
+      run: mvn clean install -DskipTests=True
+    - name: Build & push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v5
       with:
-        image: hidpdeveastusbotacr.azurecr.io/test:latest
-        registry: hidpdeveastusbotacr.azurecr.io 
+        image: github_actions
+        tags: latest
+        registry: hidpdeveastusazcrvvd.azurecr.io
+        dockerfile: Dockerfile
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
         
@@ -37,4 +38,3 @@ jobs:
         
         
         
-
